--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Task</title>
+    <title>My Page</title>
     <link rel="stylesheet" href="assets/StyleSheets/main.css">
 
 </head>
